--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -33,6 +33,27 @@
           // end nav-item
           li.nav-item
             a.nav-link(
+              aria-controls="sidebarProduct" 
+              aria-expanded="false" 
+              role="button" 
+              data-bs-toggle="collapse" 
+              href="#sidebarProduct"
+              )
+              i.iconoir-shop.menu-icon
+              span Sản phẩm
+            #sidebarProduct.collapse
+              ul.nav.flex-column
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/product/create`) Tạo sản phẩm
+                // end nav-item
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/product/list`) Danh sách sản phẩm
+                // end nav-item
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/product/category`) Danh mục sản phẩm
+                // end nav-item
+          li.nav-item
+            a.nav-link(
               aria-controls="sidebarArticle" 
               aria-expanded="false" 
               role="button" 
