--- a/views/admin/pages/product-trash-category.pug
+++ b/views/admin/pages/product-trash-category.pug
@@ -1,6 +1,4 @@
 extends ../layouts/default.pug
-include ../mixins/pagination.pug
-include ../mixins/form-search.pug
 
 block main
   .row
@@ -12,24 +10,17 @@ block main
               h4.card-title #{pageTitle}
             // end col
             .col-auto
-              a.btn.btn-danger.me-1(
-                  href=`/${pathAdmin}/product/category/trash`
-                  )
-                  i.fa-solid.fa-trash.me-1
-                  | Thùng rác
-              a.btn.btn-primary(
-                href=`/${pathAdmin}/product/category/create`
+              a.btn.btn-secondary(
+                href=`/${pathAdmin}/product/category`
                 )
-                i.fa-solid.fa-plus.me-1
-                | Tạo danh mục
+                <i class="fa-solid fa-arrow-left me-1"></i>
+                | Quay lại danh sách
                 // end col
             // end col
           // end row
         // end card-header
         .card-body.pt-0
-          .row
-            .col-lg-6
-              +form-search()
+          //- Table
           .table-responsive
             table.table.table-striped.mb-0
               thead.table-light
@@ -44,7 +35,7 @@ block main
               tbody
                 each item, index in recordList
                   tr
-                    td #{pagination.skip + index + 1}
+                    td #{index + 1}
                     td
                       if(item.avatar)
                         img(
@@ -60,14 +51,18 @@ block main
                         span(class="badge bg-danger") Tạm dừng
                     td #{item.view}
                     td.text-end
-                      a(href=`/${pathAdmin}/product/category/edit/${item.id}`)
-                        i.las.la-pen-alt.text-secondary.fs-18.ms-1
                       a(
-                        href="javascript:;"
-                        button-api
-                        data-method="PATCH"
-                        data-api=`/${pathAdmin}/product/category/delete/${item.id}`
-                      )
-                        i.las.la-trash-alt.text-secondary.fs-18.ms-1
-          +pagination()
+                          href="javascript:;"
+                          button-api
+                          data-method="PATCH"
+                          data-api=`/${pathAdmin}/product/category/undo/${item.id}`
+                        )
+                          i.las.la-undo-alt.text-success.fs-18.ms-1
+                      a(
+                          href="javascript:;"
+                          button-api
+                          data-method="DELETE"
+                          data-api=`/${pathAdmin}/product/category/destroy/${item.id}`
+                        )
+                          i.las.la-trash-alt.text-danger.fs-18.ms-1
     // end col
