--- a/views/admin/pages/file-manager.pug
+++ b/views/admin/pages/file-manager.pug
@@ -74,10 +74,16 @@ block main
         // end row
       // end card-header
       .card-body.pt-0
+        div.mb-2
+          span.btn.btn-outline-info(
+            button-copy-multi
+          ) Copy file đã chọn
         .table-responsive
           table.table.table-striped.mb-0
             thead.table-light
               tr
+                th
+                  input(type="checkbox" class="checkbox-all")
                 th Tên
                 th Ngày tạo
                 th Kích thước
@@ -85,6 +91,8 @@ block main
             tbody
               each item in listFile
                 tr
+                  td
+                    input(type="checkbox" class="checkbox-input" value=`${item.folder}/${item.filename}`)
                   td
                     if (item.mimetype.includes("image"))
                       img(
