--- a/public/admin/assets/css/main.css
+++ b/public/admin/assets/css/main.css
@@ -90,3 +90,24 @@
   width: 16px;
   height: 16px;
 }
+
+/* option-list */
+.option-list {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.option-item {
+  display: flex;
+  gap: 10px;
+}
+
+.option-item .option-move {
+  cursor: move;
+}
+
+.option-item input {
+  flex: 1;
+}
+/* End option-list */
