--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -52,6 +52,9 @@
                 li.nav-item
                   a.nav-link(href=`/${pathAdmin}/product/category`) Danh mục sản phẩm
                 // end nav-item
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/product/attribute`) Thuộc tính sản phẩm
+                // end nav-item
           li.nav-item
             a.nav-link(
               aria-controls="sidebarArticle" 
