--- a/views/admin/pages/product-create.pug
+++ b/views/admin/pages/product-create.pug
@@ -42,6 +42,14 @@ block main
               div(class="checkbox-list" checkbox-list="category")
                 +checkbox-list(categoryList)
                     .col-md-12.col-lg-12
+          .col-md-6.col-lg-6
+            .mb-3
+              label.form-label(for="priceOld") Giá cũ
+              input.form-control(id="priceOld" type="number" name="priceOld")
+          .col-md-6.col-lg-6
+            .mb-3
+              label.form-label(for="priceNew") Giá mới
+              input.form-control(id="priceNew" type="number" name="priceNew")
             .mb-3
               label.form-label Danh sách ảnh
               div(class="form-multi-file")
