--- a/views/admin/pages/product-create.pug
+++ b/views/admin/pages/product-create.pug
@@ -36,7 +36,7 @@ block main
                 option(value="draft") Bản nháp
                 option(value="active") Hoạt động
                 option(value="inactive") Tạm dừng
-          .col-md-6.col-lg-6
+          .col-md-12.col-lg-12
             .mb-3
               label.form-label Danh mục
               div(class="checkbox-list" checkbox-list="category")
@@ -50,6 +50,39 @@ block main
             .mb-3
               label.form-label(for="priceNew") Giá mới
               input.form-control(id="priceNew" type="number" name="priceNew")
+          .col-md-12.col-lg-12
+            .mb-3
+              label.form-label Danh sách thuộc tính
+              div(class="checkbox-list" checkbox-list="attributes")
+                +checkbox-list(attributeList)
+              span.btn.btn-outline-info.mt-1(
+                button-render-variant="attributes"
+              ) Tạo biến thể
+              script. 
+                const attributeList = !{JSON.stringify(attributeList)}
+          .col-md-12.col-lg-12
+            .mb-3
+              label.form-label Danh sách biến thể
+              .table-responsive-sm
+                table.table.mb-0
+                  thead.table-light
+                    tr
+                      th(scope="col") Trạng thái
+                      th(scope="col") Kích cỡ
+                      th(scope="col") Màu sắc
+                      th(scope="col") Giá cũ
+                      th(scope="col") Giá mới
+                  tbody
+                    tr
+                      td
+                        .form-check.form-switch.form-switch-success
+                          input.form-check-input(type="checkbox" checked)
+                      td Size S
+                      td Đỏ
+                      td
+                        input.form-control(type="number")
+                      td
+                        input.form-control(type="number")
             .mb-3
               label.form-label Danh sách ảnh
               div(class="form-multi-file")
