--- a/views/admin/pages/product-create.pug
+++ b/views/admin/pages/product-create.pug
@@ -64,25 +64,25 @@ block main
             .mb-3
               label.form-label Danh sách biến thể
               .table-responsive-sm
-                table.table.mb-0
+                table.table.mb-0(variant-table)
                   thead.table-light
                     tr
-                      th(scope="col") Trạng thái
-                      th(scope="col") Kích cỡ
-                      th(scope="col") Màu sắc
-                      th(scope="col") Giá cũ
-                      th(scope="col") Giá mới
+                      //- th(scope="col") Trạng thái
+                      //- th(scope="col") Kích cỡ
+                      //- th(scope="col") Màu sắc
+                      //- th(scope="col") Giá cũ
+                      //- th(scope="col") Giá mới
                   tbody
-                    tr
-                      td
-                        .form-check.form-switch.form-switch-success
-                          input.form-check-input(type="checkbox" checked)
-                      td Size S
-                      td Đỏ
-                      td
-                        input.form-control(type="number")
-                      td
-                        input.form-control(type="number")
+                    //- tr
+                    //-   td
+                    //-     .form-check.form-switch.form-switch-success
+                    //-       input.form-check-input(type="checkbox" checked)
+                    //-   td Size S
+                    //-   td Đỏ
+                    //-   td
+                    //-     input.form-control(type="number")
+                    //-   td
+                    //-     input.form-control(type="number")
             .mb-3
               label.form-label Danh sách ảnh
               div(class="form-multi-file")
