--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -34,6 +34,7 @@ html(
       )
     link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css")
     link(href="https://releases.transloadit.com/uppy/v5.1.11/uppy.min.css" rel="stylesheet")
+    link(href="https://unpkg.com/mobius1-selectr@latest/dist/selectr.min.css" rel="stylesheet")
     // App css
     link(
       type="text/css" 
@@ -85,6 +86,7 @@ html(
     script(src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js")
     script(src="https://cdn.jsdelivr.net/npm/sweetalert2@11")
     script(src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.6/Sortable.min.js")
+    script(src="https://unpkg.com/mobius1-selectr@latest/dist/selectr.min.js")
     script(src="https://cdn.tiny.cloud/1/93s3c2zvlmcrzq2f25uhooiivql6uyamcgrjbgd3dy4nstvc/tinymce/8/tinymce.min.js" referrerpolicy="origin" crossorigin="anonymous")
     script(src="/admin/assets/libs/bootstrap/js/bootstrap.bundle.min.js")
     script(src="/admin/assets/libs/simplebar/simplebar.min.js")
