--- a/views/admin/partials/startbar.pug
+++ b/views/admin/partials/startbar.pug
@@ -122,6 +122,24 @@
                   li.nav-item
                     a.nav-link(href=`/${pathAdmin}/account-admin/list`) Danh sách tài khoản
                 // end nav-item
+                    li.nav-item
+            a.nav-link(
+              aria-controls="sidebarCoupon" 
+              aria-expanded="false" 
+              role="button" 
+              data-bs-toggle="collapse" 
+              href="#sidebarCoupon"
+              )
+              i.iconoir-percentage-circle.menu-icon
+              span Mã giảm giá
+            #sidebarCoupon.collapse
+              ul.nav.flex-column
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/coupon/create`) Tạo mã giảm giá
+                // end nav-item
+                li.nav-item
+                  a.nav-link(href=`/${pathAdmin}/coupon/list`) Danh sách mã giảm giá
+                // end nav-item
           li.nav-item
             a.nav-link(
               href=`/${pathAdmin}/admin-log/list`
