--- a/views/client/partials/main-menu.pug
+++ b/views/client/partials/main-menu.pug
@@ -14,7 +14,7 @@ nav.d-none.d-lg-block(class="main_menu_2 main_menu")
                 alt="Zenis" 
                 src="/client/assets/images/logo_2.png"
                 )
-            div(class="menu_category_bar")
+            div(class="menu_category_bar" data-bs-toggle="collapse" data-bs-target="#collapseMenuMain" aria-expanded="true")
               p
                 span
                   img(
