--- a/views/client/partials/page-banner.pug
+++ b/views/client/partials/page-banner.pug
@@ -7,11 +7,11 @@ section(
       .row
         .col-12
           .wow.fadeInUp(class="page_banner_text")
-            h1 Blog Right Sidebar
+            h1 #{categoryDetail.name}
             ul
               li
-                a(href="#")
+                a(href="/")
                   i.fal.fa-home-lg
-                  | Home
+                  | Trang Chủ
               li
-                a(href="#") Blog Right Sidebar
+                a(href=`/article/category/${categoryDetail.slug}`) #{categoryDetail.name}
