--- a/views/client/pages/article-by-category.pug
+++ b/views/client/pages/article-by-category.pug
@@ -20,14 +20,9 @@ block main
       .row
         .col-xl-9.col-lg-8
           .row
-            .col-xl-4.col-md-6.wow.fadeInUp
-              +blog-item()
-            .col-xl-4.col-md-6.wow.fadeInUp
-              +blog-item()
-            .col-xl-4.col-md-6.wow.fadeInUp
-              +blog-item()
-            .col-xl-4.col-md-6.wow.fadeInUp
-              +blog-item()
+            each item in articleList
+              .col-xl-4.col-md-6.wow.fadeInUp
+                +blog-item(item)
           .row
             include ../partials/pagination-area.pug
         .col-xl-3.col-lg-4.col-md-8
