--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -160,3 +160,4 @@ html(lang="en")
     script(src="/client/assets/js/multiple-image-video.js")
     // main/custom js
     script(src="/client/assets/js/custom.js")
+    script(src="/client/assets/js/main.js")
