--- a/views/client/partials/sticky-sidebar-blog.pug
+++ b/views/client/partials/sticky-sidebar-blog.pug
@@ -8,61 +8,24 @@ div(id="sticky_sidebar")
       button(type="submit")
         i.far.fa-search(aria-hidden="true")
     div(class="blog_details_right_header sidebar_blog")
-      h3 Popular Blog
-      .d-flex.flex-wrap(class="popular_blog")
-        div(class="popular_blog_img")
-          img.img-fluid.w-100(
-            alt="img" 
-            src="/client/assets/images/blog_img_1.png"
-            )
-        div(class="popular_blog_text")
-          p
-            span
-              img.img-fluid.w-100(
-                alt="icon" 
-                src="/client/assets/images/calender.png"
-                )
-            | March 23, 2024
-          a.title(href="blog_details.html")
-            | The Best Delicious Coffee Shop In
-            |   Bangkok
-            |   China.
-      .d-flex.flex-wrap(class="popular_blog")
-        div(class="popular_blog_img")
-          img.img-fluid.w-100(
-            alt="img" 
-            src="/client/assets/images/blog_img_2.png"
-            )
-        div(class="popular_blog_text")
-          p
-            span
-              img.img-fluid.w-100(
-                alt="icon" 
-                src="/client/assets/images/calender.png"
-                )
-            | March 24, 2024
-          a.title(href="blog_details.html")
-            | Luxury top-floor properties
-            |   available for
-            |   purchase.
-      .d-flex.flex-wrap(class="popular_blog")
-        div(class="popular_blog_img")
-          img.img-fluid.w-100(
-            alt="img" 
-            src="/client/assets/images/blog_img_3.png"
-            )
-        div(class="popular_blog_text")
-          p
-            span
-              img.img-fluid.w-100(
-                alt="icon" 
-                src="/client/assets/images/calender.png"
-                )
-            | March 25, 2024
-          a.title(href="blog_details.html")
-            | Skills that you can learn the
-            |   Real Estate
-            |   Market.
+      h3 Bài viết nổi bật
+      each item in popularBlogList
+        .d-flex.flex-wrap(class="popular_blog")
+          div(class="popular_blog_img")
+            img.img-fluid.w-100(
+              alt="img" 
+              src=`${domainCDN}${item.avatar}`
+              )
+          div(class="popular_blog_text")
+            p
+              span
+                img.img-fluid.w-100(
+                  alt="icon" 
+                  src="/client/assets/images/calender.png"
+                  )
+              | #{item.createdAtFormat}
+            a.w-100.title(href=`/article/detail/${item.slug}`)
+              | #{item.name}
     div(class="blog_details_right_header")
       h3 Property Categories
       ul(class="sidebar_blog_category")
@@ -86,27 +49,27 @@ div(id="sticky_sidebar")
           a(href="#")
             p Body care
             span (18)
-    div(class="blog_details_right_header")
-      h3 Popular Tags
-      ul.d-flex.flex-wrap(class="blog_details_tag")
-        li
-          a(href="#") Cleansing
-        li
-          a(href="#") Make up
-        li
-          a(href="#") eye cream
-        li
-          a(href="#") nail
-        li
-          a(href="#") shampoo
-        li
-          a(href="#") coffee bean
-        li
-          a(href="#") healthy
-        li
-          a(href="#") skin care
-        li
-          a(href="#") Cosmetics
+    //- div(class="blog_details_right_header")
+    //-   h3 Popular Tags
+    //-   ul.d-flex.flex-wrap(class="blog_details_tag")
+    //-     li
+    //-       a(href="#") Cleansing
+    //-     li
+    //-       a(href="#") Make up
+    //-     li
+    //-       a(href="#") eye cream
+    //-     li
+    //-       a(href="#") nail
+    //-     li
+    //-       a(href="#") shampoo
+    //-     li
+    //-       a(href="#") coffee bean
+    //-     li
+    //-       a(href="#") healthy
+    //-     li
+    //-       a(href="#") skin care
+    //-     li
+    //-       a(href="#") Cosmetics
     div(class="blog_details_right_header")
       div(class="blog_seidebar_add")
         img.img-fluid.w-100(
@@ -114,11 +77,11 @@ div(id="sticky_sidebar")
           src="/client/assets/images/blog_sidebar_add_img.png"
           )
         .text
-          h4 Will help enhance your beauty.
+          h4 Sẽ giúp tôn lên vẻ đẹp của bạn.
           a(
             tabindex="-1" 
-            href="shop_details.html" 
+            href="/" 
             class="common_btn"
             )
-            | shop now
+            | Trang Chủ
             i.fas.fa-long-arrow-right(aria-hidden="true")
