--- a/views/client/mixins/product-list-item.pug
+++ b/views/client/mixins/product-list-item.pug
@@ -1,17 +1,18 @@
-mixin product-list-item()
+mixin product-list-item(item)
   div(class="product_list_item product_item_2 product_item")
     .row.align-items-center
       .col-md-5.col-sm-6.col-xxl-4
         div(class="product_img")
           img.img-fluid.w-100(
-            alt="Product" 
-            src="/client/assets/images/product_17.png"
+            alt=item.name 
+            src=`${domainCDN}${item.images[0]}`
             )
           ul(class="discount_list")
-            li.new new
-            li.discount
-              b -
-              | 75%
+            //- li.new new
+            if (item.discount)
+              li.discount
+                b -
+                | #{item.discount}%
           ul(class="btn_list")
             li
               a(href="#")
@@ -27,32 +28,29 @@ mixin product-list-item()
                   )
       .col-md-7.col-sm-6.col-xxl-8
         div(class="product_text")
-          a.title(href="shop_details.html")
-            | Denim Jeans Pants For
-            |   Men
+          a.title(href=`/product/detail/${item.slug}`)
+            | #{item.name}
           p.rating
             i.fas.fa-star
             i.fas.fa-star
             i.fas.fa-star
             i.fas.fa-star
             i.fas.fa-star
-            span (27 reviews)
+            span (0 Đánh giá)
           p.price
-            | $50.00
-            del $60.00
-          ul.color
-            li.active(style="background:#DB4437")
-            li(style="background:#638C34")
-            li(style="background:#1C58F2")
-            li(style="background:#ffa500")
+            if (item.priceNew)
+              | #{item.priceNew.toLocaleString("vi-VN")}đ
+            if (item.priceOld)
+              del #{item.priceOld.toLocaleString("vi-VN")}đ
+          if (item.colorList.length > 0)
+            ul.color
+              each color in item.colorList
+                li(style=`background:${color}`)
           p(class="short_description")
-            | Lorem ipsum dolor sit amet consectetur,
-            |   adipisicing elit. Exercitationem inventore libero accusantium ex
-            |   ipsam, provident voluptas facere nemo, quas assumenda
-            |   reprehenderit nihil ratione quaerat ad.
+            | !{item.description}
           a(
-            href="shop_details.html" 
+            href=`/product/detail/${item.slug}`
             class="common_btn"
             )
-            | add to cart
+            | Xem chi tiết
             i.fas.fa-long-arrow-right
