01. Tính năng Phân trang (Trang danh sách sản phẩm)

--- a/views/client/pages/product-by-category.pug
+++ b/views/client/pages/product-by-category.pug
@@ -37,22 +37,22 @@ block main
                 each item in productList
                   .col-xxl-3.col-6.col-md-4.col-lg-6.col-xl-4.wow.fadeInUp
                     +product-item-2(item)
-              .row
-                div(class="pagination_area")
-                  nav(aria-label="...")
-                    ul.pagination.justify-content-start(class="mt_50")
-                      li.page-item
-                        a.page-link(href="#")
-                          i.far.fa-arrow-left
-                      li.page-item
-                        a.page-link.active(href="#") 01
-                      li.page-item
-                        a.page-link(href="#") 02
-                      li.page-item
-                        a.page-link(href="#") 03
-                      li.page-item
-                        a.page-link(href="#")
-                          i.far.fa-arrow-right
+              //- .row
+              //-   div(class="pagination_area")
+              //-     nav(aria-label="...")
+              //-       ul.pagination.justify-content-start(class="mt_50")
+              //-         li.page-item
+              //-           a.page-link(href="#")
+              //-             i.far.fa-arrow-left
+              //-         li.page-item
+              //-           a.page-link.active(href="#") 01
+              //-         li.page-item
+              //-           a.page-link(href="#") 02
+              //-         li.page-item
+              //-           a.page-link(href="#") 03
+              //-         li.page-item
+              //-           a.page-link(href="#")
+              //-             i.far.fa-arrow-right
             #nav-profile.tab-pane.fade(
               tabindex="0" 
               aria-labelledby="nav-profile-tab" 
@@ -62,22 +62,23 @@ block main
                 each item in productList
                   .col-6.col-xxl-10.col-sm-12
                     +product-list-item(item)
-              .row
-                div(class="pagination_area")
-                  nav(aria-label="...")
-                    ul.pagination.justify-content-start(class="mt_50")
-                      li.page-item
-                        a.page-link(href="#")
-                          i.far.fa-arrow-left
-                      li.page-item
-                        a.page-link.active(href="#") 01
-                      li.page-item
-                        a.page-link(href="#") 02
-                      li.page-item
-                        a.page-link(href="#") 03
-                      li.page-item
-                        a.page-link(href="#")
-                          i.far.fa-arrow-right
+              //- .row
+              //-   div(class="pagination_area")
+              //-     nav(aria-label="...")
+              //-       ul.pagination.justify-content-start(class="mt_50")
+              //-         li.page-item
+              //-           a.page-link(href="#")
+              //-             i.far.fa-arrow-left
+              //-         li.page-item
+              //-           a.page-link.active(href="#") 01
+              //-         li.page-item
+              //-           a.page-link(href="#") 02
+              //-         li.page-item
+              //-           a.page-link(href="#") 03
+              //-         li.page-item
+              //-           a.page-link(href="#")
+              //-             i.far.fa-arrow-right
+            include ../partials/pagination-area.pug
   //
     ============================
     SHOP PAGE END
