--- a/views/client/partials/product-page-top.pug
+++ b/views/client/partials/product-page-top.pug
@@ -22,20 +22,14 @@ div(class="product_page_top")
               data-bs-toggle="tab"
               )
               i.fas.fa-list-ul
-        p Showing 1–14 of 26 results
+        p Hiển thị #{pagination.skip+1} – #{pagination.skip+productList.length} của #{pagination.totalRecord} kết quả
     .col-8.col-xl-6.col-md-6
       ul(class="product_page_sorting")
-        li
-          select(class="select_js")
-            option Default Sorting
-            option Low to Hight
-            option High to Low
-            option New Added
-            option On Sale
-        li
+        li(select-js)
           select.show(class="select_js")
-            option Show: 12
-            option Show: 16
-            option Show: 20
-            option Show: 24
-            option Show: 26
+            option(value="12") Hiển thị: 12
+            option(value="16") Hiển thị: 16
+            option(value="20") Hiển thị: 20
+            option(value="24") Hiển thị: 24
+            option(value="28") Hiển thị: 28
+
