02. Tính năng Sắp xếp (Trang danh sách sản phẩm)

--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -8039,9 +8039,9 @@ footer {
   font-size: 16px;
 }
 
-.product_page_sorting .select_js.show {
+/* .product_page_sorting .select_js.show {
   width: 130px;
-}
+} */
 
 .product_page_sorting .nice-select {
   width: 180px;
