--- a/views/client/partials/product-page-top.pug
+++ b/views/client/partials/product-page-top.pug
@@ -25,7 +25,14 @@ div(class="product_page_top")
         p Hiển thị #{pagination.skip+1} – #{pagination.skip+productList.length} của #{pagination.totalRecord} kết quả
     .col-8.col-xl-6.col-md-6
       ul(class="product_page_sorting")
-        li(select-js)
+        li(select-js="sort")
+          select.show(class="select_js")
+            option(value="position-desc") Mặc định
+            option(value="price-asc") Giá thấp đến cao
+            option(value="price-desc") Giá cao đến thấp
+            option(value="createdAt-desc") Sản phẩm mới
+            option(value="discount-desc") Giảm giá nhiều
+        li(select-js="limitItems")
           select.show(class="select_js")
             option(value="12") Hiển thị: 12
             option(value="16") Hiển thị: 16
