Fix lỗi giật giao diện

--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -155,7 +155,8 @@ html(lang="en")
     // range slider js
     script(src="/client/assets/js/range_slider.js")
     // sticky sidebar js
-    script(src="/client/assets/js/sticky_sidebar.js")
+    block script
+    //- script(src="/client/assets/js/sticky_sidebar.js")
     // multiple image upload js
     script(src="/client/assets/js/multiple-image-video.js")
     // main/custom js
