--- a/views/client/pages/product-by-category.pug
+++ b/views/client/pages/product-by-category.pug
@@ -84,3 +84,5 @@ block main
     SHOP PAGE END
     =============================
   //
+  block script
+      script(src="/client/assets/js/sticky_sidebar.js")
