--- a/views/client/partials/sticky-sidebar-shop.pug
+++ b/views/client/partials/sticky-sidebar-shop.pug
@@ -21,97 +21,26 @@ div(id="sticky_sidebar")
           )
         label.form-check-label(for="filterInStock") Còn hàng
     div(class="sidebar_category")
-      h3 Categories
+      h3 Danh mục
       ul
         each item in categoryProductList
           li
             a(href="javascript:;" button-slug=item.slug)
               | #{item.name}
-    div(class="sidebar_color")
-      h3 Filter by Color
-      ul
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #DB4437;" 
-              id="color_1" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_1") Red
-          span 03
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #41CF0F;" 
-              id="color_2" 
-              checked="" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_2") green
-          span 17
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #8e8e8e;" 
-              id="color_3" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_3") gray
-          span 06
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #ffa500;" 
-              id="color_4" 
-              checked="" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_4") Orange
-          span 09
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #B615FD;" 
-              id="color_5" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_5") purple
-          span 42
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #FFD747;" 
-              id="color_6" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_6") Yellow
-          span 23
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #AB9774;" 
-              id="color_7" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_7") Olive
-          span 06
-        li
-          .form-check
-            input.form-check-input(
-              style="background-color: #1C58F2;" 
-              id="color_8" 
-              value="" 
-              type="checkbox"
-              )
-            label.form-check-label(for="color_8") Dark Blue
-          span 25
+    each attribute in attributeProductList
+      div(class=`${attribute.type == "color" ? "sidebar_color" : "sidebar_status"}`)
+        h3 #{attribute.name}
+        ul(filter-attribute=attribute.id)
+          each option in attribute.options
+            li
+              .form-check
+                input.form-check-input(
+                  style=`${attribute.type == "color" ? `background-color: ${option.value}` : ""}`
+                  id=`${attribute.text}-${option.id}-${option.value}` 
+                  value=option.value 
+                  type="checkbox"
+                  )
+                label.form-check-label(for=`${attribute.text}-${option.id}-${option.value}`) #{option.label}
     div(class="sidebar_rating")
       h3 Rating
       .form-check
