02. Trang tìm kiếm nâng cao

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -20,18 +20,16 @@ header(class="header_2")
             span(class="mobile_menu_icon")
               i.far.fa-stream(class="menu_icon_bar")
       .col-xXl-6.col-xl-5.col-lg-5.d-none.d-lg-block
-        form(action="#")
-          select(class="select_2")
-            option All Categories
-            option Fashion
-            option Elentronics
-            option Fashion & Beauty
-            option Jewelry
-            option Grocery
+        form(form-search)
+          select(class="select_2" name="category")
+            option(value="") Tất cả danh mục
+            each item in categoryProductList
+              option(value=item.slug) #{item.name}
           .input
             input(
-              placeholder="Search your product..." 
+              placeholder="Tìm kiếm sản phẩm..." 
               type="text"
+              name="keyword"
               )
             button(type="submit")
               i.far.fa-search
