02. Trang tìm kiếm nâng cao

--- a/views/client/partials/main-menu.pug
+++ b/views/client/partials/main-menu.pug
@@ -29,7 +29,7 @@ nav.d-none.d-lg-block(class="main_menu_2 main_menu")
               a.active(href="/")
                 | Trang chủ
             li
-              a(href="#")
+              a(href="/product/category")
                 | Sản Phẩm
                 i.fas.fa-chevron-down
               ul(class="menu_droapdown")
