03. Tìm kiếm bằng giọng nói

--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -687,6 +687,15 @@ header
 
 header form .input {
   width: 65%;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+header form .input .inner-voice {
+  margin-left: 20px;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 header form input {
@@ -694,6 +703,7 @@ header form input {
   padding: 14px 20px;
   font-size: 14px;
   background: none;
+  flex: 1;
 }
 
 header form button {
