--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -26,6 +26,8 @@ header(class="header_2")
             each item in categoryProductList
               option(value=item.slug) #{item.name}
           .input
+            span(class="inner-voice" button-voice)
+              i(class="fas fa-microphone")
             input(
               placeholder="Tìm kiếm sản phẩm..." 
               type="text"
