01. Gợi ý sản phẩm khi gõ từ khóa tìm kiếm - Khung PUG, CSS

--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -35,6 +35,23 @@ header(class="header_2")
               )
             button(type="submit")
               i.far.fa-search
+          .inner-suggest()
+            .inner-title Sản phẩm gợi ý
+            .inner-list
+              a(href="#" class="inner-item")
+                img(src="/client/assets/images/product_18.png" class="inner-image")
+                .inner-info
+                  .inner-name Samsung Galaxy S25 Ultra 12GB 256GB
+                  .inner-prices
+                    .inner-price-new 27.990.000đ
+                    .inner-price-old 33.380.000đ
+              a(href="#" class="inner-item")
+                img(src="/client/assets/images/product_18.png" class="inner-image")
+                .inner-info
+                  .inner-name Samsung Galaxy S25 Ultra 12GB 256GB
+                  .inner-prices
+                    .inner-price-new 27.990.000đ
+                    .inner-price-old 33.380.000đ
       .col-xXl-4.col-xl-5.col-lg-5.d-none.d-lg-flex
         .d-flex.flex-wrap(class="header_support_user")
           div(class="header_support")
