--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -12142,3 +12142,77 @@ footer {
 /*===========================
     DASHBOARD END
 ===========================*/
+
+/* .header_2 form */
+.header_2 form .inner-suggest {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  z-index: 999;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 8px 0;
+  line-height: 1.4;
+}
+
+.header_2 form .inner-suggest .inner-title {
+  background-color: #f3f3f3;
+  color: #1d1d20;
+  padding: 5px 10px;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.header_2 form .inner-suggest .inner-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 5px 10px;
+}
+
+.header_2 form .inner-suggest .inner-item:hover {
+  background-color: #f3f3f3;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-image {
+  width: 60px !important;
+  aspect-ratio: 1/1;
+  object-fit: contain !important;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-info {
+  flex: 1;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-name {
+  font-size: 12px;
+  font-weight: 600;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+  color: #1d1d20;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-prices {
+  display: flex;
+  align-items: center;
+  gap: 5px 10px;
+  flex-wrap: wrap;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-price-new {
+  color: #db003b;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+.header_2 form .inner-suggest .inner-item .inner-price-old {
+  color: #777;
+  font-size: 12px;
+  text-decoration: line-through;
+  font-weight: 500;
+}
+/* End .header_2 form */
