--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -35,7 +35,7 @@ header(class="header_2")
               )
             button(type="submit")
               i.far.fa-search
-          .inner-suggest()
+          .inner-suggest.d-none
             .inner-title Sản phẩm gợi ý
             .inner-list
               a(href="#" class="inner-item")
