--- a/public/client/assets/css/style.css
+++ b/public/client/assets/css/style.css
@@ -8331,10 +8331,9 @@ footer {
 .details_variant_size li {
   height: 25px;
   line-height: 25px;
-  width: 45px;
+  padding: 0 8px;
   background: var(--lightBg2);
   text-align: center;
-  text-transform: uppercase;
   font-size: 14px;
   font-weight: 400;
   color: var(--colorBlack);
@@ -8472,7 +8471,7 @@ footer {
   text-transform: capitalize;
 }
 
-.details_tags_sku li span {
+.details_tags_sku li span, .details_tags_sku li a {
   color: var(--colorBlack);
   font-size: 15px;
   margin-right: 5px;
