02. Đề xuất sản phẩm thường mua kèm

--- a/views/client/pages/product-detail.pug
+++ b/views/client/pages/product-detail.pug
@@ -28,6 +28,7 @@ block main
               include ../partials/shop-details-slider-area.pug
             .col-lg-6.wow.fadeInUp
               include ../partials/shop-details-text.pug
+          include ../partials/bought-together-products.pug
           .row.wow.fadeInUp(class="mt_90")
             .col-12
               include ../partials/shop-details-des-area.pug
