--- a/views/admin/pages/product-create.pug
+++ b/views/admin/pages/product-create.pug
@@ -121,6 +121,14 @@ block main
             .mb-3
               label.form-label Tags
               select(select-tag name="tags")
+          .col-md-12.col-lg-12
+            .mb-3
+              label.form-label Sản phẩm mua kèm
+              select(select-tag name="boughtTogether" multiple taggable="false")
+                each item in productList
+                  option(
+                    value=item._id
+                    ) #{item.name}
         button.btn.btn-primary(type="submit") Tạo mới
         a.btn.btn-danger.ms-1(href=`/${pathAdmin}/product/list`) Hủy
 
