03. Lịch sử xem sản phẩm

--- a/views/client/pages/product-detail.pug
+++ b/views/client/pages/product-detail.pug
@@ -43,6 +43,7 @@ block main
     RELATED PRODUCTS START
     =============================
   include ../partials/related-products.pug
+  include ../partials/view-history-products.pug
   //
     ============================
     RELATED PRODUCTS END
