--- a/views/client/partials/shop-details-text.pug
+++ b/views/client/partials/shop-details-text.pug
@@ -42,7 +42,11 @@ div(class="shop_details_text")
       button.minus
         i.fal.fa-minus
       input(
-        placeholder="01" 
+        value=(productDetail.stock > 0 ? 1 : 0)
+        min="1"
+        max=productDetail.stock
+        readonly
+        class="input-quantity"
         type="text"
         )
       button.plus
