01. Tính năng Thêm sản phẩm vào giỏ hàng

--- a/views/client/layouts/default.pug
+++ b/views/client/layouts/default.pug
@@ -9,6 +9,7 @@ html(lang="en")
       name="viewport"
       )
     title #{pageTitle}
+    link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.css")
     link(
       href="/client/assets/images/favicon.png"
       type="image/png" 
@@ -162,5 +163,6 @@ html(lang="en")
     // multiple image upload js
     script(src="/client/assets/js/multiple-image-video.js")
     // main/custom js
+    script(src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js")
     script(src="/client/assets/js/custom.js")
     script(src="/client/assets/js/main.js")
