--- a/views/client/partials/shop-details-text.pug
+++ b/views/client/partials/shop-details-text.pug
@@ -58,8 +58,9 @@ div(class="shop_details_text")
         )
         | Mua ngay
         i.fas.fa-long-arrow-right
-      a(
-        href="#" 
+      button(
+        button-add-cart
+        product-id=productDetail.id
         class="common_btn"
         )
         | Thêm vào giỏ
