--- a/views/client/partials/main-menu.pug
+++ b/views/client/partials/main-menu.pug
@@ -74,7 +74,7 @@ nav.d-none.d-lg-block(class="main_menu_2 main_menu")
                     alt="cart" 
                     src="/client/assets/images/cart_black.svg"
                     )
-                span 3
+                span(mini-cart-quantity) 0
             li
               a.user(href="dashboard.html")
                 b
